syntax = "proto3";

import "harmonify.shared";

package harmonify.user_service;

message User {
  optional string email = 1;
  optional string userId = 2;
  optional string phoneNumber = 3;
}

message AuthenticateUserRequest {
  string accessToken = 1;
}

message AuthenticateUserResponse {
  int32 code = 1;
  optional User data = 2;
  optional harmonify.shared.ErrorResponse error = 3;
}

message GetUserRequest {
  string userId = 1;
}

message GetUserResponse {
  int32 code = 1;
  optional User data = 2;
  optional harmonify.shared.ErrorResponse error = 3;
}